Fixed z-index issue with footer main content

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -6,7 +6,10 @@
   color: $primary-color;
   text-align: center;
   padding: 3.2rem 0 0.8rem;
-
+  position: relative;
+  &__main {
+    z-index: 10;
+  }
   &__social {
     padding: 0.8rem 0;
   }
